--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -4,4 +4,4 @@
     <li><%= book.title %><%= link_to 'Edit', edit_book_path(book.id) %></li>
   <% end %>
 </ul>
-<%= link_to 'Add a book', '/books/new' %>
+<%= link_to 'Add a book', new_book_path %>
