--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,8 +1,2 @@
 <h1>Add a book</h1>
-<%= form_with model: @book do |f| %>
-  <%= f.text_field :title %>
-  <%= f.submit %>
-<% end %>
-<p>
-  <%= link_to 'cancel', books_path %>
-</p>
+<%= render 'form' %>
